data/derived/sp14/progs/unify/prog1788.ml.out
Characters 82-105:
  | Sine s -> Sine ( exprToString s );;
              ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit -> expr
